# reverse-dep-finder

./: .gitignore  CHANGELOG.md  README.md  cabal.project  reverse-dep-finder.cabal
app/: Main.hs  Options.hs
src/: ReverseDepFinder.hs
